syntax = "proto3";

option go_package = "github.com/piyushbag/oms-common/api";

package api;

message Order {
  string order_id = 1;
  string CustomerId = 2;
  string Status = 3;
  repeated Item Items = 4;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (Order);
}

message  ItemsWithQuantity {
    string ID = 1;
    int32 Quantity = 2;

}

message Item {
    string Id = 1;
    string Name = 2;
    int32 Quantity = 3;
    string Price = 4;
}

message CreateOrderRequest {
  string customerID = 1;
  repeated ItemsWithQuantity Items = 2;
}